feat: Add docker + dredd
